# mesh-organiser

./: .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  Dockerfile  README.md  eslint.config.js  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tailwind.config.ts  vite.config.js
.agent/: entropy-reduction-state.md
.agent/entropy-reduction/: phase-1-architecture.md  phase-2-deduplication.md  phase-3-best-practices.md  phase-4-performance.md  phase-5-security.md  phase-6-docs-sync.md
.cursor/rules/: search-before-adding.mdc  verification-before-completion.mdc
.github/: RELEASE.md  dependabot.yml
.github/workflows/: ci.yaml  force-build.yml  release.yaml  rust-ci.yaml  svelte-ci.yaml
.opencode/skill/subagent-driven-development/: implementer-prompt.md
db/: Cargo.toml  build.rs  model.sqlite
db/migrations/: 20260525120000_models_group_user_id_not_null.sql
db/src/: blob_db.rs  db_context.rs  group_db.rs  label_db.rs  label_keyword_db.rs  lib.rs  model.rs  model_db.rs  paginated_response.rs  query_util.rs  resource_db.rs  share_db.rs  user_db.rs  util.rs
db/src/model/: blob.rs  label.rs  label_keyword.rs  mod.rs  model_group.rs  resource.rs  share.rs  user.rs
db/tests/: sql_queries_integration.rs
deployment/: Dockerfile  README.md  docker-compose.yml
docs/: commands.md  frontend-style.md  git-workflow.md  rust-style.md  simplify-report.md  tauri-sveltekit.md
docs/api/: v1-mobile-remote.md
docs/superpowers/plans/: 2026-03-29-mobile-web-app-implementation.md  2026-03-31-codebase-review-and-fixes-plan.md
docs/superpowers/specs/: 2026-03-29-mobile-app-design.md  2026-03-29-remote-client-and-http-api-design.md  2026-03-29-tauri-mobile-app.md  2026-03-31-automatic-fixes-sequential-parallel-design.md  2026-03-31-codebase-review-and-fixes-design.md
libmeshthumbnail/: Cargo.toml
libmeshthumbnail/examples/: step_probe.rs
libmeshthumbnail/src/: error.rs  extract_image.rs  lib.rs  mesh.rs  parse_model.rs  path_ext.rs  render.rs  scene.rs
libmeshthumbnail/src/extract_image/: gcode.rs  threemf.rs
libmeshthumbnail/src/parse_model/: gcode.rs  obj.rs  step.rs  stl.rs  threemf.rs
libmeshthumbnail/tests/fixtures/: README.md
mobile/: capacitor.config.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
mobile/.svelte-kit/: ambient.d.ts
mobile/src/: App.svelte  app.html  main.ts
mobile/src/lib/api/: meshOrganiserApi.ts
mobile/src/lib/components/: BottomNav.svelte  ModelLibrary.svelte  ModelViewer.svelte  SlicingSettings.svelte
mobile/src/lib/shared/: group_api.ts  label_api.ts  resource_api.ts  slicer_api.ts
mobile/src/lib/stores/: authStore.ts
mobile/src/routes/: +layout.svelte  +layout.ts  +page.svelte
mobile/src/routes/import/: +page.svelte
mobile/src/routes/print/: +page.svelte
mobile/src/screens/: ModelImportScreen.svelte
mobile/src/utils/: offlineQueue.ts
patch/libmeshthumbnail/: Cargo.toml
patch/libmeshthumbnail/src/: lib.rs  mesh.rs  parse_model.rs  render.rs  scene.rs
patch/libmeshthumbnail/src/extract_image/: gcode.rs  mod.rs  threemf.rs
patch/libmeshthumbnail/src/parse_model/: gcode.rs  mod.rs  obj.rs  step.rs  stl.rs  threemf.rs
patches/: vite@8.0.1.patch
scripts/: check-package-cargo-version.mjs
service/: Cargo.toml
service/src/: app_state.rs  configuration.rs  download_file_service.rs  export_service.rs  import_service.rs  import_state.rs  lib.rs  resource_service.rs  service_error.rs  slice_service.rs  slicer_service.rs  threemf_service.rs  thumbnail_service.rs  util.rs
service/src/slicer_service/: base.rs  linux.rs  macos.rs  mod.rs  win.rs
service/tests/: download_file_to_integration.rs  resource_service_integration.rs  slice_service_integration.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release-csp.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: commands.rs  error.rs  inject.js  lib.rs  main.rs  mobile_guard.rs  tauri_app_state.rs  tauri_import_state.rs  util.rs  web_server.rs
src-tauri/src/api/: blob_api.rs  group_api.rs  label_api.rs  mod.rs  model_api.rs  resource_api.rs  user_api.rs  web_extensions_api.rs
src-tauri/src/commands/: server_url.rs
src-tauri/src/service/: download_file_service.rs  export_service.rs  import_service.rs  thumbnail_service.rs
src-tauri/tests/: step_smoke.rs
src/lib/: account_link_data.svelte.ts  configuration.svelte.ts  drag-selected-models.svelte.ts  glyph.ts  import.svelte.ts  paths.ts  sidebar_data.svelte.ts  sync.svelte.ts  theme.ts  update_data.svelte.ts  utils.ts
src/lib/api/: api.test.ts  api.ts  dependency_injection.ts
src/lib/components/: app-sidebar.svelte
src/lib/hooks/: is-mobile.svelte.ts  is-split-grid-size.svelte.ts
src/lib/workers/: parseModelWorker.ts  parseModelWorkerMessage.test.ts  parseModelWorkerMessage.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/favorite/: +page.svelte
src/routes/group/: +page.svelte
src/routes/import/: +page.svelte
src/routes/login/: +page.svelte
src/routes/mobile-server/: +page.svelte
src/routes/model/: +page.svelte
src/routes/panic/: +page.svelte
src/routes/print/: +page.svelte
src/routes/resource/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/share/: +page.svelte
src/routes/slice/: +page.svelte
src/themes/: amethysthaze.css  default.css  graphite.css  nature.css  nord.css  perpetuity.css  quantumrose.css  shadcnred.css  sunsethorizon.css  synthwave.css  vintageretro.css
web/: Cargo.toml  README.md
web/src/: app.rs  controller.rs  error.rs  main.rs  path_safety.rs  query_bounds.rs  user.rs  web_app_state.rs  web_import_state.rs
web/src/controller/: api_router.rs  auth_controller.rs  blob_controller.rs  group_controller.rs  label_controller.rs  mod.rs  model_controller.rs  page_controller.rs  resource_controller.rs  share_controller.rs  slicer_controller.rs  threemf_controller.rs  user_controller.rs
(+212 files in other folders)
