[workspace]
members = ["db", "libmeshthumbnail", "service", "web", "src-tauri"]
resolver = "2"

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
# Priority is needed so our config below is respected over the pedantic group
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
redundant_clone = "warn"
style = "warn"
unnecessary_self_imports = "warn"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
arboard = { version = "3.6.1", default-features = false }
async_zip = "0.0.18"
base64 = "0.22.1"
fake = { version = "4.4.0", features = ["derive"] }
proptest = "1.10.0"
euc = { git = "https://github.com/zesterer/euc", rev = "e8f7aeec9ff431b373f83de2c773ddf8a2a3ec4d", default-features = false }
opencascade = { git = "https://github.com/bschwind/opencascade-rs", rev = "09b2614613a88e21267be656992212c87df96805" }
tempfile = "3.27.0"
vek = "0.17.2"
wavefront_obj = "11.0.0"
zip = "8.2.0"
axum = "0.8.8"
axum-extra = "0.12.5"
axum-login = "0.18.0"
axum-messages = "0.8.0"
bitflags = "2.11.0"
chrono = "0.4.44"
db = { path = "db" }
futures = "0.3.32"
hex = "0.4.3"
htmlescape = "0.3.1"
image = { version = "0.25.10", default-features = false }
indexmap = "2.13.0"
itertools = "0.14.0"
libmeshthumbnail = { path = "libmeshthumbnail" }
password-auth = "1.0.0"
rand = "0.10.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
serde = "1.0.228"
serde_html_form = "0.4.0"
serde_json = "1.0.149"
service = { path = "service" }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false }
stl_io = "0.10.0"
strum = "0.28.0"
tauri = "2.10.3"
tauri-build = "2.5.6"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
thiserror = "2.0.18"
threemf = { git = "https://github.com/suchmememanyskill/3mf-rs", rev = "d78e731b2fcf127692380332ad2708aec65dee68" }
time = "0.3.47"
tokio = "1.50.0"
tokio-util = "0.7.18"
tower_governor = "0.8.0"
tower-http = "0.6.8"
tower-sessions-sqlx-store = "0.15.0"
tracing-subscriber = "0.3.23"
urlencoding = "2.1.3"
winreg = "0.56.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
