[workspace]
members = ["db", "libmeshthumbnail", "service", "web", "src-tauri"]
resolver = "3"

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
# Priority is needed so our config below is respected over the pedantic group
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
style = "warn"
unnecessary_self_imports = "warn"

[workspace.package]
version = "2.6.0"
edition = "2024"
rust-version = "1.94.1"

[workspace.dependencies]
db = { path = "db" }
libmeshthumbnail = { path = "libmeshthumbnail" }
service = { path = "service" }

euc = { git = "https://github.com/zesterer/euc", rev = "e8f7aeec9ff431b373f83de2c773ddf8a2a3ec4d", default-features = false }
opencascade = { git = "https://github.com/bschwind/opencascade-rs", rev = "09b2614613a88e21267be656992212c87df96805" , default-features = false }
threemf = { version = "0.8.0" }

arboard = { version = "3.6.1", default-features = false }
async_zip = "0.0.18"
base64 = { version = "0.22.1", default-features = false }
fake = { version = "5.1.0", default-features = false }
proptest = { version = "1.11.0", features = ["std"], default-features = false }
tempfile = { version = "3.27.0", default-features = false }
vek = { version = "0.17.2", features = ["rgba"], default-features = false }
wavefront_obj = "11.0.0"
zip = { version = "8.5.1", default-features = false }
axum = { version = "0.8.9", default-features = false }
axum-extra = { version = "0.12.6", default-features = false }
axum-login = "0.18.0"
axum-messages = "0.8.0"
bitflags = "2.11.1"
chrono = { version = "0.4.44", default-features = false }
futures = { version = "0.3.32", features = ["std"], default-features = false }
hex = { version = "0.4.3", default-features = false }
htmlescape = "0.3.1"
image = { version = "0.25.10", default-features = false }
indexmap = { version = "2.14.0", default-features = false }
itertools = "0.14.0"
password-auth = { version = "1.0.0", features = ["argon2"], default-features = false }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
serde_html_form = { version = "0.4.0", features = ["de", "std"], default-features = false }
serde_json = "1.0.149"
sha2 = { version = "0.11.0", default-features = false }
sqlx = { version = "0.8.6", default-features = false }
stl_io = "0.11.0"
strum = { version = "0.28.0", default-features = false }
tauri = { version = "2.10.3", features = ["wry"], default-features = false }
tauri-build = { version = "2.5.6", default-features = false }
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-http = { version = "2.5.8", features = ["cookies"], default-features = false }
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = { version = "2.10.1", default-features = false }
tauri-plugin-single-instance = "2.4.1"
thiserror = { version = "2.0.18", default-features = false }
time = { version = "0.3.47", default-features = false }
tokio = "1.52.1"
tokio-util = "0.7.18"
tower_governor = { version = "0.8.0", features = ["axum"], default-features = false }
tower-http = "0.6.8"
tower-sessions = { version = "0.14.0", default-features = false }
tower-sessions-sqlx-store = "0.15.0"
tracing-subscriber = { version = "0.3.23", features = ["fmt"], default-features = false }
urlencoding = "2.1.3"
winreg = "0.56.0"
wiremock = "0.6.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
