[package]
name = "db"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
serde = { workspace = true, features = ["derive"] }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "migrate",
    "runtime-tokio",
    "sqlite",
] }
indexmap = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true, features = ["derive"] }
password-auth = { workspace = true }
