[package]
name = "db"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lints]
workspace = true

[dependencies]
bitflags = { workspace = true }
serde = { workspace = true}
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
sqlx = { workspace = true}
indexmap = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true, features = ["derive"] }
password-auth = { workspace = true }
