[package]
name = "libmeshthumbnail"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
step = ["dep:cadrum"]

[dependencies]
base64 = { workspace = true }
euc = { workspace = true }
image = { workspace = true, features = ["png"] }
regex = { workspace = true }
stl_io = { workspace = true }
tempfile = { workspace = true }
threemf = { workspace = true }
thiserror = { workspace = true }
vek = { workspace = true }
wavefront_obj = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
cadrum = { workspace = true, optional = true }

# Linux builds OCCT from source with the local toolchain (10-30 min once, then
# cached in the cargo target dir). The prebuilt tarball bundles a static
# libstdc++ from cadrum's build host, which collides with the system libstdc++
# the GTK/WebKit stack loads and segfaults the Tauri app at startup. Windows
# keeps the prebuilt: its mingw link is fully static, so there is no collision.
[target.'cfg(target_os = "linux")'.dependencies]
cadrum = { workspace = true, optional = true, features = ["source"] }
