[package]
name = "libmeshthumbnail"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
step = ["dep:cadrum"]

[dependencies]
base64 = { workspace = true }
# cadrum's own build script picks the OCCT for the current target (prebuilt
# download by default, source build with the `source` feature) — see the
# target table in cadrum's README.
cadrum = { workspace = true, optional = true }
euc = { workspace = true }
image = { workspace = true, features = ["png"] }
regex = { workspace = true }
stl_io = { workspace = true }
tempfile = { workspace = true }
threemf = { workspace = true }
thiserror = { workspace = true }
vek = { workspace = true }
wavefront_obj = { workspace = true }
zip = { workspace = true }

# Linux opts out of the prebuilt and builds OCCT from source with the local
# toolchain (10-30 min once, then cached in the cargo target dir): the prebuilt
# tarball bundles a static libstdc++ from cadrum's build host, which collides
# with the system libstdc++ the GTK/WebKit stack loads and segfaults the Tauri
# app at startup. Cargo merges this entry with the plain one above, adding the
# `source` feature only on linux.
[target.'cfg(target_os = "linux")'.dependencies]
cadrum = { workspace = true, optional = true, features = ["source"] }
