[package]
name = "service"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
step = ["libmeshthumbnail/step"]

[dependencies]
db = { workspace = true }
libmeshthumbnail = { workspace = true }

futures = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
indexmap = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
stl_io = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
threemf = { workspace = true }
tokio = { workspace = true, features = ["process", "rt-multi-thread", "time"] }
tokio-util = { workspace = true, features = ["io"] }
urlencoding = { workspace = true }
vek = { workspace = true }
async_zip = { workspace = true, features = [
    "deflate",
    "deflate64",
    "tokio-fs",
] }
chrono = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
reqwest = { workspace = true, features = ["rustls"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
