[package]
name = "service"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
step = ["libmeshthumbnail/step"]

[dependencies]
db = { workspace = true }
libmeshthumbnail = { workspace = true }

futures = { workspace = true }
image = { workspace = true, features = ["jpeg", "png"] }
indexmap = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
# TLS: `native-tls` (Schannel on Windows) avoids pulling `aws-lc-sys` / pure-Rust TLS stacks into
# Windows CI and matches typical desktop proxy setups. Prefer `rustls` only if you standardize on
# it across the workspace and accept its build graph.
reqwest = { workspace = true, default-features = false, features = ["json", "native-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
stl_io = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
threemf = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["io"] }
urlencoding = { workspace = true }
vek = { workspace = true }
async_zip = { workspace = true, features = [
    "deflate",
    "deflate64",
    "tokio-fs",
] }
chrono = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "native-tls"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = { workspace = true }
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
