[package]
name = "service"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
step = ["libmeshthumbnail/step"]

[dependencies]
db = { workspace = true }
libmeshthumbnail = { workspace = true }

futures = { workspace = true }
image = { workspace = true}
indexmap = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true }
sha2 = { workspace = true }
stl_io = { workspace = true }
strum = { workspace = true}
thiserror = { workspace = true }
threemf = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
urlencoding = { workspace = true }
vek = { workspace = true }
async_zip = { workspace = true}
chrono = { workspace = true }

[dev-dependencies]
fake = { workspace = true }
proptest = { workspace = true }
reqwest = { workspace = true}
tempfile = { workspace = true }
tokio = { workspace = true}
wiremock = { workspace = true }
zip = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
