[package]
name = "mesh-organiser"
version = "2.0.0"
description = "Organise your 3d models"
authors = ["suchmememanyskill", "Tanguille"]
edition = "2024"

[lib]
name = "mesh_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
urlencoding = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["io"] }
arboard = { workspace = true }
itertools = { workspace = true }
tauri-plugin-fs = { workspace = true, features = ["watch"] }
tauri-plugin-os = { workspace = true }
db = { workspace = true }
service = { workspace = true }
serde_html_form = { workspace = true }
tauri-plugin-http = { workspace = true, features = ["multipart"] }
content_disposition = { workspace = true }
async_zip = { workspace = true, features = [
    "deflate",
    "deflate64",
    "tokio-fs",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
