[package]
name = "mesh-organiser"
version.workspace = true
description = "Organise your 3d models"
authors = ["suchmememanyskill", "Tanguille"]
edition.workspace = true

[lib]
name = "mesh_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
urlencoding = { workspace = true }
strum = { workspace = true}
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tokio = { workspace = true}
tokio-util = { workspace = true}
arboard = { workspace = true }
itertools = { workspace = true }
tauri-plugin-fs = { workspace = true}
tauri-plugin-os = { workspace = true }
db = { workspace = true }
service = { workspace = true }
serde_html_form = { workspace = true }
tauri-plugin-http = { workspace = true, features = ["multipart"] }
async_zip = { workspace = true}

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { workspace = true}
