[package]
name = "mesh-organiser"
version.workspace = true
description = "Organise your 3d models"
authors = ["suchmememanyskill", "Tanguille"]
edition.workspace = true

[lib]
name = "mesh_organiser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["protocol-asset"] }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
urlencoding = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tauri-plugin-updater = { workspace = true }
tauri-plugin-process = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
] }
tokio-util = { workspace = true, features = ["io"] }
arboard = { workspace = true }
itertools = { workspace = true }
tauri-plugin-fs = { workspace = true }
tauri-plugin-os = { workspace = true }
db = { workspace = true }
# STEP support ships on linux/windows; other targets compile it out — see the
# cadrum target notes in libmeshthumbnail/Cargo.toml (linux builds OCCT from source).
service = { workspace = true, features = ["step"] }
serde_html_form = { workspace = true }
tauri-plugin-http = { workspace = true, features = ["multipart"] }
async_zip = { workspace = true, features = [
    "deflate",
    "deflate64",
    "tokio-fs",
] }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { workspace = true }

[dev-dependencies]
libmeshthumbnail = { workspace = true, features = ["step"] }
