[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["query"] }
tokio = { workspace = true, features = ["process", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true, features = ["io"] }
axum-login = { workspace = true }
password-auth = { workspace = true }
db = { workspace = true }
service = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum-messages = { workspace = true }
time = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors", "fs"] }
# Use 0.14 to match axum-login so SessionManagerLayer has with_signed; 0.15 would be type-incompatible.
tower-sessions = { version = "0.14", features = ["signed"] }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
async_zip = { workspace = true, features = ["deflate", "deflate64", "tokio-fs"] }
htmlescape = { workspace = true }
