[package]
name = "web"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
db = { workspace = true }

axum = { workspace = true, features = ["multipart"] }
axum-extra = { workspace = true, features = ["query"] }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true}
axum-login = { workspace = true }
password-auth = { workspace = true }
service = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
axum-messages = { workspace = true }
time = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors", "fs"] }
tower-sessions = { workspace = true, features = ["signed"] }
tower-sessions-sqlx-store = { workspace = true, features = ["sqlite"] }
async_zip = { workspace = true}
htmlescape = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true}
